Added continous movement of alien spaceship

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     if(event.key == 'ArrowUp') {moveUp()}
     if(event.key == 'ArrowDown') {moveBottom()}
     if(event.key == ' ') {fireBullet()}
+    if(event.key == 'm') {moveAlien()}
     ">
     <div id="spaceship">
         <img src="http://www.myiconfinder.com/uploads/iconsets/256-256-7647188dd0df401f7ec5c5358a0af9a1-rocket.png" alt=""
             style="background-size: cover; width: 100px; height: 100px;">
     </div>
     <div class="bullet"> </div>
-    <div class="alien">
-        <img src="https://i.ibb.co/2ZHXCm4/download.png" alt="alien"/>
+    <div id="alien">
+        <img style= 'left:700px' src="https://i.ibb.co/2ZHXCm4/download.png" alt="alien"/>
     </div>
 </body>
 
