--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
     if(event.key == 'ArrowUp') {moveUp()}
     if(event.key == 'ArrowDown') {moveBottom()}
     if(event.key == ' ') {fireBullet()}
-    if(event.key == 'm') {moveAlien()}
-    ">
+    // if(event.key == 'm') {moveAlien()}
+    " onload = "moveAlien()">
     <div id="spaceship">
         <img src="http://www.myiconfinder.com/uploads/iconsets/256-256-7647188dd0df401f7ec5c5358a0af9a1-rocket.png" alt=""
             style="background-size: cover; width: 100px; height: 100px;">
     </div>
-    <div class="bullet"> </div>
     <div id="alien">
         <img style= 'left:700px' src="https://i.ibb.co/2ZHXCm4/download.png" alt="alien"/>
     </div>
