--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     if(event.key == 'ArrowRight') {moveRight()}
     if(event.key == 'ArrowUp') {moveUp()}
     if(event.key == 'ArrowDown') {moveBottom()}
-    if(event.key == ' ') {fireBullet()}
+    if(event.key == 'f') {fireBullet()}
     // if(event.key == 'm') {moveAlien()}
-    " onload = "moveAlien()">
+    if(event.key == 'a') {fireShot()}
+    "onload = "moveAlien()"
+   >
     <div id="spaceship">
         <img src="http://www.myiconfinder.com/uploads/iconsets/256-256-7647188dd0df401f7ec5c5358a0af9a1-rocket.png" alt=""
             style="background-size: cover; width: 100px; height: 100px;">
@@ -23,6 +25,7 @@
     <div id="alien">
         <img style= 'left:700px' src="https://i.ibb.co/2ZHXCm4/download.png" alt="alien"/>
     </div>
+    <div class = "alienAttack"> </div>
 </body>
 
 </html>
