Alien is continously firing shots at random time

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     if(event.key == 'ArrowDown') {moveBottom()}
     if(event.key == 'f') {fireBullet()}
     if(event.key == 'a') {fireShot()}
+    if(event.key == 'q') {fireContinousShot()}
         "onload = "moveAlien()"
    ">
     <div id="spaceship">
