--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     if(event.key == 'f') {fireBullet()}
     if(event.key == 'a') {fireShot()}
     if(event.key == 'q') {fireContinousShot()}
-    "   onload="moveAlien()" 
-    ">
-    <div id=" spaceship">
-    <img src="http://www.myiconfinder.com/uploads/iconsets/256-256-7647188dd0df401f7ec5c5358a0af9a1-rocket.png" alt=""
-        style="background-size: cover; width: 100px; height: 100px;">
+    "
+    onload="moveAlien()">
+    <div id= "spaceship">
+        <img src="http://www.myiconfinder.com/uploads/iconsets/256-256-7647188dd0df401f7ec5c5358a0af9a1-rocket.png" alt=""
+            style="background-size: cover; width: 100px; height: 100px;">
     </div>
     <div id="alien">
         <img style='left:700px' src="https://i.ibb.co/2ZHXCm4/download.png" alt="alien" />
