--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     if(event.key == 'ArrowDown') {moveBottom()}
     if(event.key == 'f') {fireBullet()}
     if(event.key == 'a') {fireShot()}
-    
-    "
-    >
+    if(event.key == 'q') {fireContinousShot()}
+    " onload="moveAlien()">
     <div id= "spaceship">
         <img src="http://www.myiconfinder.com/uploads/iconsets/256-256-7647188dd0df401f7ec5c5358a0af9a1-rocket.png" alt=""
             style="background-size: cover; width: 100px; height: 100px;">
