--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
     if(event.key == 'ArrowRight') {moveRight()}
     if(event.key == 'ArrowUp') {moveUp()}
     if(event.key == 'ArrowDown') {moveBottom()}
-    if(event.key == 'f') {fireBullet()}
-    if(event.key == 'a') {fireShot()}
-    if(event.key == 'q') {fireContinousShot()}
-    " onload="moveAlien()">
-    <div id= "spaceship">
+    if(event.key == ' ') {fireBullet()}
+    "onload="moveAlien();fireContinousShot()">
+    <div id="spaceship">
         <img src="http://www.myiconfinder.com/uploads/iconsets/256-256-7647188dd0df401f7ec5c5358a0af9a1-rocket.png" alt=""
             style="background-size: cover; width: 100px; height: 100px;">
     </div>
     <div id="alien">
-        <img style='left:700px' src="download.png" alt="alien" />
+        <img style='left:750px' src="alien.png" alt="alien" />
     </div>
 </body>
 
